# huB32API

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Dockerfile  Doxyfile  README.md  SCHOOL_DEPLOYMENT_PLAN.md  fe-reference.txt  report.md  report2.md
agent/: CMakeLists.txt
agent/conf/: default.json
agent/include/hub32agent/: AgentClient.hpp  AgentConfig.hpp  CommandDispatcher.hpp  FeatureHandler.hpp  WinServiceAdapter.hpp
agent/include/hub32agent/encode/: ColorConverter.hpp  EncoderFactory.hpp  H264Encoder.hpp
agent/include/hub32agent/features/: InputLock.hpp  MessageDisplay.hpp  PowerControl.hpp  ScreenCapture.hpp  ScreenLock.hpp  StreamControl.hpp
agent/include/hub32agent/pipeline/: StreamPipeline.hpp
agent/include/hub32agent/webrtc/: SignalingClient.hpp  WebRtcProducer.hpp
agent/src/: AgentClient.cpp  AgentConfig.cpp  CommandDispatcher.cpp  WinServiceAdapter.cpp  main.cpp
agent/src/encode/: CpuColorConverter.cpp  CpuColorConverter.hpp  D3D11ColorConverter.cpp  D3D11ColorConverter.hpp  EncoderFactory.cpp  NvencEncoder.cpp  NvencEncoder.hpp  QsvEncoder.cpp  QsvEncoder.hpp  X264Encoder.cpp  X264Encoder.hpp
agent/src/features/: InputLock.cpp  MessageDisplay.cpp  PowerControl.cpp  ScreenCapture.cpp  ScreenLock.cpp  StreamControl.cpp
agent/src/pipeline/: FrameQueue.hpp  StreamPipeline.cpp
agent/src/webrtc/: SignalingClient.cpp  WebRtcProducer.cpp
agent/tests/: test_command_dispatcher.cpp  test_stream_pipeline.cpp  test_x264_encoder.cpp
docs/: CMakeLists.txt  LINUX_MEDIASOUP_BUILD.md  TODO.md
docs/api/: v1.md  v2.md
docs/architecture/: overview.md
docs/superpowers/plans/: 2026-03-26-phase0-security.md  2026-03-26-phase1-database.md  2026-03-26-phase6-demo.md  2026-03-26-phase7-testing.md  2026-03-26-stream-pipeline-phase-4-5.md
docs/superpowers/specs/: 2026-03-26-phase0-security-design.md
src/: CMakeLists.txt
src/agent/: AgentRegistry.cpp  AgentRegistry.hpp  HeartbeatMonitor.cpp  HeartbeatMonitor.hpp
src/api/common/: HttpErrorUtil.cpp  HttpErrorUtil.hpp
src/api/v1/: CMakeLists.txt
src/api/v2/: CMakeLists.txt
src/auth/: CMakeLists.txt  Hub32KeyAuth.cpp  Hub32KeyAuth.hpp  JwtAuth.cpp  JwtAuth.hpp  UserRoleStore.cpp  UserRoleStore.hpp  VeyonKeyAuth.cpp  VeyonKeyAuth.hpp
src/auth/internal/: JwtValidator.cpp  JwtValidator.hpp  TokenStore.cpp  TokenStore.hpp
src/config/: CMakeLists.txt  ServerConfig.cpp
src/config/internal/: ConfigValidator.cpp  ConfigValidator.hpp
src/core/: ApiContext.cpp  AuditLog.cpp  CMakeLists.txt  ConnectionPool.cpp  Constants.cpp  CryptoUtils.cpp  Hub32CoreWrapper.cpp  I18n.cpp  PluginRegistry.cpp  PrecompiledHeader.hpp  VeyonCoreWrapper.cpp
src/core/internal/: ApiContext.hpp  AuditLog.hpp  ConnectionPool.hpp  CryptoUtils.hpp  Hub32CoreWrapper.hpp  I18n.hpp  PluginRegistry.hpp  VeyonCoreWrapper.hpp
src/db/: CMakeLists.txt  ClassRepository.cpp  ClassRepository.hpp  ComputerRepository.cpp  ComputerRepository.hpp  DatabaseManager.cpp  DatabaseManager.hpp  LocationRepository.cpp  LocationRepository.hpp  PendingRequestRepository.cpp  PendingRequestRepository.hpp  SchoolRepository.cpp  SchoolRepository.hpp  StudentRepository.cpp  StudentRepository.hpp  TeacherLocationRepository.cpp  TeacherLocationRepository.hpp  TeacherRepository.cpp  TeacherRepository.hpp  TenantRepository.cpp  TenantRepository.hpp
src/media/: CMakeLists.txt  MediasoupSfuBackend.cpp  MediasoupSfuBackend.hpp  MockSfuBackend.cpp  MockSfuBackend.hpp  RoomManager.cpp  RoomManager.hpp  SfuBackend.hpp  WorkerChannel.cpp  WorkerChannel.hpp  WorkerMessageBuilder.cpp  WorkerMessageBuilder.hpp
src/media/FBS/: activeSpeakerObserver_generated.h  consumer_generated.h  dataConsumer_generated.h  dataProducer_generated.h  directTransport_generated.h  message_generated.h  plainTransport_generated.h  response_generated.h  router_generated.h  rtpPacket_generated.h  rtxStream_generated.h  sctpAssociation_generated.h  transport_generated.h  webRtcTransport_generated.h  worker_generated.h
src/plugins/: CMakeLists.txt
src/plugins/computer/: CMakeLists.txt  ComputerPlugin.cpp  ComputerPlugin.hpp  NetworkDirectoryBridge.cpp  NetworkDirectoryBridge.hpp
src/plugins/feature/: CMakeLists.txt  FeaturePlugin.cpp  FeaturePlugin.hpp  FeatureRegistry.cpp  FeatureRegistry.hpp
src/plugins/metrics/: CMakeLists.txt  MetricsPlugin.cpp  MetricsPlugin.hpp
src/plugins/session/: CMakeLists.txt  SessionPlugin.cpp  SessionPlugin.hpp
src/server/: CMakeLists.txt  HttpServer.cpp  HttpServer.hpp  Router.cpp  SseManager.cpp  SseManager.hpp  ThreadPool.cpp
src/server/internal/: Router.hpp  ThreadPool.hpp
src/service/: CMakeLists.txt  WinServiceAdapter.cpp  WinServiceAdapter.hpp  main.cpp
src/service_email/: EmailService.cpp  EmailTemplates.cpp  EmailTemplates.hpp
src/utils/: json_utils.cpp  json_utils.hpp  string_utils.cpp  string_utils.hpp  time_utils.cpp  time_utils.hpp  validation_utils.cpp  validation_utils.hpp
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt  test_agent_db_integration.cpp  test_api_v1_full.cpp  test_api_v2_full.cpp  test_auth_flow.cpp
tests/mocks/: MockComputerPlugin.hpp  MockFeaturePlugin.hpp
tests/unit/: CMakeLists.txt
tests/unit/agent/: test_agent_registry.cpp  test_heartbeat_monitor.cpp
tests/unit/auth/: test_agent_key_validation.cpp  test_jwt_auth.cpp  test_register_flow.cpp  test_token_store_sqlite.cpp  test_user_role_store.cpp
tests/unit/core/: test_connection_pool.cpp  test_crypto_utils.cpp  test_plugin_registry.cpp  test_result_type.cpp
tests/unit/db/: test_class_repository.cpp  test_computer_repository.cpp  test_database_manager.cpp  test_location_repository.cpp  test_school_repository.cpp  test_student_repository.cpp  test_teacher_location_repository.cpp  test_teacher_repository.cpp  test_tenant_repository.cpp
tests/unit/media/: test_mock_sfu_backend.cpp  test_room_manager.cpp
tests/unit/plugins/: test_computer_plugin.cpp  test_feature_plugin.cpp
tests/unit/utils/: test_json_utils.cpp  test_string_utils.cpp  test_time_utils.cpp  test_validation_utils.cpp
(+141 files in other folders)
